# fakevpn

./: .gitignore  Cargo.toml  go.mod  go.sum  main.go
.github/workflows/: build.yml
src/: main.rs  server.rs  vpn.rs  windows_tap.rs
