[package]
name = "fakevpn"
version = "0.1.0"
edition = "2021"

[dependencies]
iroh = "1.0"
iroh-base = "1.0" 
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"

# Käytetään Windows-rajapintoja TAP-laitteen avaamiseen
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Registry"] }
